# compute-file-server

./: README.md
.github/actions/github-release/: README.md  action.yml  main.js  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
ci/: build-tarballs.sh
ci/docker/aarch64-linux/: Dockerfile
ci/docker/s390x-linux/: Dockerfile
ci/docker/x86_64-linux/: Dockerfile
cli/: Cargo.toml  readme.md
cli/src/: main.rs
examples/javascript/: fastly.toml  package-lock.json  package.json
examples/javascript/src/: index.js
examples/rust/: Cargo.toml  README.md  fastly.toml
examples/rust/src/: main.rs
javascript/: index.js  package-lock.json  package.json  readme.md
javascript/example/: fastly.toml  package-lock.json
javascript/example/src/: index.js
libraries/javascript/: .eslintrc.cjs  index.js  package-lock.json  package.json  readme.md
libraries/rust/: Cargo.toml
libraries/rust/src/: lib.rs
npm/: README.md  c-at-e-file-server  index.js  package-lock.json  package.json  post-install.js  update.js
npm/c-at-e-file-server/: README.md  c-at-e-file-server.js  index.js  package-lock.json  package.json  update.js
npm/c-at-e-file-server-darwin-arm64/: package.json
npm/c-at-e-file-server-darwin-x64/: index.js  package.json
npm/c-at-e-file-server-linux-x64/: index.js  package.json
npm/c-at-e-file-server-win32-x64/: index.js  package.json
site/: index.html  styles.css
tests/: Cargo.toml
tests/src/: lib.rs
