[package]
name = "c-at-e-file-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
clap = "4.0.10"
infer = "0.9.0"
new_mime_guess = "4.0.1"
phf = { version = "0.11", features = ["macros"] }
walkdir = "2.3.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
simple-error = "0.2.3"
serde_derive = "1.0.145"
serde = "1.0.145"
urlencoding = "2.1.2"
fastly-api = "1.0.0-beta.0"
indicatif = "0.17.1"
futures = "0.3.24"
toml_edit = {version = "0.14.4", features = ["easy"]}
percent-encoding = "2.2.0"
