[package]
name = "c-at-e-file-server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.10"
walkdir = "2.3.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
openssl = { version = "0.10.42", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
simple-error = "0.2.3"
serde_derive = "1.0.145"
serde = "1.0.145"
fastly-api = "1.0.0-beta.0"
indicatif = "0.17.1"
futures = "0.3.24"
percent-encoding = "2.2.0"
