[package]
name = "compute-file-server"
version = "0.0.2-main"
edition = "2021"
description = "Library used to serve files from Fastly Object Store."
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/jakeChampion/compute-file-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastly = "0.8.7"
http = "0.2.8"
http-range = "0.1.5"
serde_derive = "1.0.145"
serde = "1.0.145"
serde_json = "1.0.86"
httpdate = "1.0.2"